--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 class="header-1">Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming Soon!)</a></p>
-    <video autoplay loop>
+    <video autoplay muted loop>
     <source src="resources/moves/excursion.mp4" type="video/mp4">
     </video>
     <h2 class="header-2">Your personal travel guide</h2>
